# sicherman-dice-solver

./: README.md  dice.py
results/: sicherman-d004.txt  sicherman-d006.txt  sicherman-d008.txt  sicherman-d009.txt  sicherman-d010.txt  sicherman-d012.txt  sicherman-d014.txt  sicherman-d015.txt  sicherman-d016.txt  sicherman-d018.txt  sicherman-d020.txt  sicherman-d021.txt  sicherman-d022.txt  sicherman-d024.txt  sicherman-d025.txt  sicherman-d026.txt  sicherman-d027.txt  sicherman-d028.txt  sicherman-d030.txt  sicherman-d032.txt  sicherman-d033.txt  sicherman-d034.txt  sicherman-d035.txt  sicherman-d036.txt  sicherman-d038.txt  sicherman-d039.txt  sicherman-d040.txt  sicherman-d042.txt  sicherman-d044.txt  sicherman-d045.txt  sicherman-d046.txt  sicherman-d048.txt  sicherman-d049.txt  sicherman-d050.txt  sicherman-d051.txt  sicherman-d052.txt  sicherman-d054.txt  sicherman-d055.txt  sicherman-d056.txt  sicherman-d057.txt  (+239 more)
rust_implementation/: Cargo.toml
rust_implementation/sicherman/: Cargo.toml
rust_implementation/sicherman-pairs/: Cargo.toml
rust_implementation/sicherman-pairs/src/: main-par.rs  main-seq.rs
rust_implementation/sicherman-trios/src/: main-par.rs  main-seq.rs
rust_implementation/sicherman/src/: main-low.rs  main-lowmem.rs  main-par.rs  main-ultralow.rs  main.rs
rust_implementation/src/: main-par.rs
