[package]
name = "sicherman"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "sicherman-par"
path = "src/main-par.rs"

[[bin]]
name = "sicherman-low"
path = "src/main-low.rs"

[[bin]]
name = "sicherman-ultralow"
path = "src/main-ultralow.rs"

[dependencies]
contest-algorithms = { git = "https://github.com/RoyDubnium/rust-algorithms.git" }
divisors = "0.2.1"
itertools = "0.13.0"
pyo3 = {version="0.23.2", features = ["auto-initialize"]}
rayon = "1.10.0"
